[package]
name = "add_hashid_by_domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastmurmur3 = "0.1.2"
structopt = "0.3.26"
url = "2.2.2"
serde = { version = "^1.0", features = ["derive"] }
csv = "1.1.6"
